[package]
name = "budget-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "net", "macros", "sync", "io-util"] }
