[package]
name = "insecure-sockets-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytes = "1.5.0"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "bytes", "io-util", "net", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
