[package]
name = "means-to-an-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "io-util", "macros", "net", "sync"] }
