[package]
name = "unusual-database-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
dashmap = "5.5.3"
phf = { version = "0.11.2", features = ["macros"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "net", "io-util", "sync"] }
