[package]
name = "voracious-code-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-tempfile = "0.4.0"
dashmap = "5.5.3"
sha1 = "0.10.6"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = [
    "io-util",
    "macros",
    "rt-multi-thread",
    "net",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

[[bin]]
name = "rproxy"
path = "src/reverse-proxy.rs"
